fixed viewport too wide bug

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -85,6 +85,7 @@ html, body {
 }
 
 body {
+	max-width: 775px;
 	width: 90%;
 	margin: 0 auto;
 }
